Update Kea primary server URL to localhost:8000

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ DB_NAME=kea_db
 DB_USER=kea_db_user
 DB_PASSWORD=Ewmp786&7
 JWT_SECRET=jwt-secret-key222
-KEA_API_ENDPOINT='http://localhost:8000'
-KEA_PRIMARY_URL='http://kea-primary:8000'
-KEA_SECONDARY_URL='http://kea-secondary:8000'
+KEA_API_ENDPOINT=http://localhost:8000
+KEA_PRIMARY_URL=http://localhost:8000
+KEA_SECONDARY_URL=http://kea-secondary:8000
