Make Docker database optional - support external/host MySQL servers

--- a/.env.docker
+++ b/.env.docker
@@ -1,24 +1,38 @@
 # Docker Environment Configuration
 # Copy this file to .env and customize for your environment
 
-# Database Configuration
-DB_HOST=kea-db
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
+
+# Option 1: Use EXTERNAL database (e.g., host MySQL server)
+# Set DB_HOST to your database server hostname or use 'host.docker.internal' for host machine
+DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_NAME=kea_db
 DB_USER=kea_user
 DB_PASSWORD=kea_secure_password
 
-# MySQL Root Password (for initial setup)
-MYSQL_ROOT_PASSWORD=root_secure_password
+# Option 2: Use DOCKER database (uncomment to use containerized MySQL)
+# To use Docker database:
+# 1. Set DB_HOST=kea-db
+# 2. Start with: docker-compose --profile with-db up -d
+# 3. Uncomment the depends_on section in docker-compose.yml
+#
+# DB_HOST=kea-db
+# MYSQL_ROOT_PASSWORD=root_secure_password
+
+# =============================================================================
+# WEB SERVER CONFIGURATION
+# =============================================================================
+
+WEB_PORT=8080
+PHPMYADMIN_PORT=8081
+DB_PORT_EXTERNAL=3307
 
 # Application Settings
 APP_ENV=production
 APP_DEBUG=false
-
-# Web Server Ports
-WEB_PORT=8080
-PHPMYADMIN_PORT=8081
-DB_PORT_EXTERNAL=3307
 
 # RADIUS Configuration (if needed)
 RADIUS_PRIMARY_HOST=radius-primary.example.com
