Remove RADIUS config from env - managed via GUI at /radius/settings

--- a/.env.docker
+++ b/.env.docker
@@ -34,15 +34,7 @@ DB_PORT_EXTERNAL=3307
 APP_ENV=production
 APP_DEBUG=false
 
-# RADIUS Configuration (if needed)
-RADIUS_PRIMARY_HOST=radius-primary.example.com
-RADIUS_PRIMARY_PORT=3306
-RADIUS_PRIMARY_USER=radius_user
-RADIUS_PRIMARY_PASSWORD=radius_password
-RADIUS_PRIMARY_DB=radius
-
-RADIUS_SECONDARY_HOST=radius-secondary.example.com
-RADIUS_SECONDARY_PORT=3306
-RADIUS_SECONDARY_USER=radius_user
-RADIUS_SECONDARY_PASSWORD=radius_password
-RADIUS_SECONDARY_DB=radius
+# =============================================================================
+# NOTE: RADIUS servers are configured via the web GUI at /radius/settings
+# No environment variables needed here!
+# =============================================================================
