Add KEA_API_ENDPOINT to Docker environment configuration

--- a/.env.docker
+++ b/.env.docker
@@ -35,6 +35,16 @@ APP_ENV=production
 APP_DEBUG=false
 
 # =============================================================================
+# KEA DHCP SERVER CONFIGURATION
+# =============================================================================
+
+# Kea Control Agent API endpoint
+# Format: http://hostname:port
+KEA_API_ENDPOINT=http://localhost:8000
+KEA_API_USER=
+KEA_API_PASSWORD=
+
+# =============================================================================
 # NOTE: RADIUS servers are configured via the web GUI at /radius/settings
 # No environment variables needed here!
 # =============================================================================
