Remove Kea API from env vars - managed via config/kea.php file

--- a/.env.docker
+++ b/.env.docker
@@ -35,7 +35,8 @@ APP_ENV=production
 APP_DEBUG=false
 
 # =============================================================================
-# NOTE: Kea DHCP API endpoints are configured via the database/GUI
-# NOTE: RADIUS servers are configured via the web GUI at /radius/settings
-# No environment variables needed here!
+# NOTES:
+# - RADIUS servers: Configure via GUI at /radius/settings
+# - Kea DHCP servers: Configure via config/kea.php or database/GUI
+# No additional environment variables needed!
 # =============================================================================
