Clarify: Kea servers configured via GUI and stored in MySQL database

--- a/.env.docker
+++ b/.env.docker
@@ -36,7 +36,7 @@ APP_DEBUG=false
 
 # =============================================================================
 # NOTES:
-# - RADIUS servers: Configure via GUI at /radius/settings
-# - Kea DHCP servers: Configure via config/kea.php or database/GUI
-# No additional environment variables needed!
+# - RADIUS servers: Configure via GUI at /radius/settings (stored in database)
+# - Kea DHCP servers: Configure via GUI (stored in database)
+# Only database connection settings needed in this file!
 # =============================================================================
