Fix Docker: Add KEA_API_ENDPOINT with default value to prevent startup error

--- a/.env.docker
+++ b/.env.docker
@@ -35,8 +35,14 @@ APP_ENV=production
 APP_DEBUG=false
 
 # =============================================================================
+# KEA DHCP CONFIGURATION (Temporary - will be moved to GUI/database)
+# =============================================================================
+
+# Kea Control Agent API endpoint
+KEA_API_ENDPOINT=http://localhost:8000
+
+# =============================================================================
 # NOTES:
 # - RADIUS servers: Configure via GUI at /radius/settings (stored in database)
-# - Kea DHCP servers: Configure via GUI (stored in database)
-# Only database connection settings needed in this file!
+# - Kea DHCP servers: Currently uses KEA_API_ENDPOINT, will be moved to GUI/database
 # =============================================================================
