Implement Kea server configuration in database - add kea_servers table and update DHCP model

--- a/.env.docker
+++ b/.env.docker
@@ -35,14 +35,11 @@ APP_ENV=production
 APP_DEBUG=false
 
 # =============================================================================
-# KEA DHCP CONFIGURATION (Temporary - will be moved to GUI/database)
-# =============================================================================
-
-# Kea Control Agent API endpoint
-KEA_API_ENDPOINT=http://localhost:8000
-
-# =============================================================================
 # NOTES:
 # - RADIUS servers: Configure via GUI at /radius/settings (stored in database)
-# - Kea DHCP servers: Currently uses KEA_API_ENDPOINT, will be moved to GUI/database
+# - Kea DHCP servers: Configure via database (kea_servers table)
+# - KEA_API_ENDPOINT: Optional fallback if kea_servers table is empty
 # =============================================================================
+
+# Optional: Kea API fallback (only used if database has no active servers)
+KEA_API_ENDPOINT=http://localhost:8000
