--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       dockerfile: Dockerfile
     container_name: kea-api-admin
     restart: unless-stopped
-    network_mode: host
+    ports:
+      - "${WEB_PORT:-8080}:80"
     volumes:
       # Mount application code (allows live updates without rebuild)
       - ./:/var/www/html:cached
@@ -34,6 +35,14 @@ services:
     # depends_on:
     #   kea-db:
     #     condition: service_healthy
+    extra_hosts:
+      # Allow container to reach host services
+      - "host.docker.internal:host-gateway"
+      # Add routes to Kea server networks (adjust IPs as needed)
+      - "172.16.7.222:172.16.7.222"
+      - "172.17.7.222:172.17.7.222"
+    networks:
+      - kea-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/"]
       interval: 30s
