Fix DHCP page empty state detection logic

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST=localhost
+DB_HOST=host.docker.internal
 DB_NAME=kea_db
-DB_USER=kea_db_user
-DB_PASSWORD=Ewmp786&7
+DB_USER=kea_user
+DB_PASSWORD=butwew%Owg8
 JWT_SECRET=jwt-secret-key222
 KEA_API_ENDPOINT=http://localhost:8000
 KEA_PRIMARY_URL=http://localhost:8000
